tests/transpiler/x/zig/string_prefix_slice.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/string_prefix_slice.zig:7:83: error: operator == not allowed for type '[]const u8'
/root/.local/share/mise/installs/zig/0.12.0/lib/std/mem.zig:1018:21: error: invalid type given to std.mem.len: *const [4:0]u8
