tests/transpiler/x/zig/string_prefix_slice.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:58 +0000
const std = @import("std");

pub fn main() void {
    const prefix = "fore";
    const s1 = "forest";
    try std.io.getStdOut().writer().print("{any}\n", .{s1[0..std.mem.len(prefix)] == prefix});
    const s2 = "desert";
    try std.io.getStdOut().writer().print("{any}\n", .{s2[0..std.mem.len(prefix)] == prefix});
}
